java 8 compatibility fix